# Onyx-Paw

./: README.md  install.sh  pyproject.toml
src/onyx_paw/: __init__.py  cli.py  collector.py  config.py  sender.py
